--- a/html_ section/csslevels/box.css
+++ b/html_ section/csslevels/box.css
@@ -3,16 +3,16 @@ body{margin : 0px;
 }
 
 #top{
-    position: absolute;
-    left: 20%;
-    width: 50%;
+    position: relative;
+    left: 35%;
+    width: 57%;
 
 background-color: rgb(216, 83, 34);
 border: darkcyan;
 border-style: solid;
 border-width: 1px;
-margin-left:35%;
-padding-left: 5%;
+/* margin-left:35%;
+padding-left: 5%; */
 
 
 }
